<resources>
    <string name="app_name">COMP3025-F2022-Week4</string>
    <string name="clear_button">C</string>
    <string name="plus_minus_button">+/-</string>
    <string name="percent_button">%</string>
    <string name="divide_button">/</string>
    <string name="backspace_button">&lt;--</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="multiply_button">X</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="minus_button">-</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_value">3</string>
    <string name="plus_button">+</string>
    <string name="zero_button">0</string>
    <string name="decimal_button">.</string>
    <string name="equals_button">=</string>
    <string name="initial_result_value">0</string>
</resources>